force-app/main/default/objects/clofor_com_cfs__AuditLoation__c/fields/clofor_com_cfs__LocatorD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LocatorD__c</fullName>
    <label>Locator ID</label>
    <referenceTo>clofor_com_cfs__LOCATOR__c</referenceTo>
    <relationshipName>LocatorID</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>