force-app/main/default/objects/clofor_com_cfs__AuditLoation__c/fields/clofor_com_cfs__LocatorDetail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LocatorDetail__c</fullName>
    <formula>clofor_com_cfs__LocatorD__r.clofor_com_cfs__Summary__c</formula>
    <label>Locator Detail</label>
    <type>Text</type>
</CustomField>