force-app/main/default/objects/clofor_com_cfs__AuditLoation__c/fields/clofor_com_cfs__LocatorLayer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LocatorLayer__c</fullName>
    <formula>text( clofor_com_cfs__LocatorD__r.clofor_com_cfs__LocatorLayer__c )</formula>
    <label>Locator Layer</label>
    <type>Text</type>
</CustomField>