force-app/main/default/objects/clofor_com_cfs__AuditLoation__c/fields/clofor_com_cfs__Status__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__WorkStatus</valueSetName>
    </valueSet>
</CustomField>