force-app/main/default/objects/clofor_com_cfs__AuditLoation__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__AuditID__c</columns>
    <columns>clofor_com_cfs__LocatorD__c</columns>
    <columns>clofor_com_cfs__LocatorLayer__c</columns>
    <columns>clofor_com_cfs__LocatorDetail__c</columns>
    <columns>clofor_com_cfs__Status__c</columns>
    <columns>clofor_com_cfs__ScheduleStartDateTime__c</columns>
    <columns>clofor_com_cfs__ScheduleEndDateTime__c</columns>
    <columns>clofor_com_cfs__ActualStartDateTime__c</columns>
    <columns>clofor_com_cfs__ActualEndDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>